--- a/index.html
+++ b/index.html
@@ -120,5 +120,13 @@
         }, 100);
 
     }
+
+    start = function(){
+
+        
+        Playnumber(1);
+
+    }
 </script>
-<button onclick='main()'>PLAY </button>
+<button onclick='start()'>Click this first </button>
+<button onclick='main()'>PAP Number </button>
