Load audio twice

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
     var nine = new Audio('9.wav');
     var first = new Audio('First.wav');
     var last = new Audio('Last.wav');
-
     function Playnumber(number) {
+        var zero = new Audio('0.wav');
+        var one = new Audio('1.wav');
+        var two = new Audio('2.wav');
+        var three = new Audio('3.wav');
+        var four = new Audio('4.wav');
+        var five = new Audio('5.wav');
+        var six = new Audio('6.wav');
+        var seven = new Audio('7.wav');
+        var eight = new Audio('8.wav');
+        var nine = new Audio('9.wav');
+        var first = new Audio('First.wav');
+        var last = new Audio('Last.wav');
 
         switch (number) {
             case 0:
@@ -76,19 +87,15 @@
     }
 
     main = function () {
-        var number = parseInt(prompt("Please enter your PAP Number", "641041"), 10);
+        var number = parseInt(prompt("Enter your PAP Number", "123456"), 10);
         var delayInMilliseconds = 1000;
         var newnumber = reverseint(number);
         var playnum;
 
-
-
-        Playnumber(20);
-
         setTimeout(function () {
-            playnum = newnumber % 10;
-            Playnumber(playnum);
-            newnumber = parseInt(newnumber / 10);
+
+            Playnumber(20);
+
             setTimeout(function () {
                 playnum = newnumber % 10;
                 Playnumber(playnum);
@@ -110,19 +117,22 @@
                                 Playnumber(playnum);
                                 newnumber = parseInt(newnumber / 10);
                                 setTimeout(function () {
+                                    playnum = newnumber % 10;
+                                    Playnumber(playnum);
+                                    newnumber = parseInt(newnumber / 10);
+                                    setTimeout(function () {
 
-                                    Playnumber(21);
+                                        Playnumber(21);
 
-                                }, 1000);
+                                    }, 1000);
+                                }, delayInMilliseconds);
                             }, delayInMilliseconds);
                         }, delayInMilliseconds);
                     }, delayInMilliseconds);
                 }, delayInMilliseconds);
-            }, delayInMilliseconds);
-        }, 2500);
-
+            }, 2500);
+        }, 100);
 
     }
-
 </script>
-<button onclick='main()'>PAP Number </button>
+<button onclick='main()'>PLAY </button>
