--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     }
 
     main = function () {
-        var number = parseInt(prompt("Enter your PAP Number", "123456"), 10);
+        var number = parseInt(prompt("Please enter your PAP Number", "123456"), 10);
         var delayInMilliseconds = 1000;
         var newnumber = reverseint(number);
         var playnum;
@@ -135,4 +135,4 @@
 
     }
 </script>
-<button onclick='main()'>PLAY </button>
+<button onclick='main()'>PAP Number </button>
